@@ -1,3 +1,7 @@
+2006-04-28  Fabio Marzocca  <thesaltydog@gmail.com>
+
+	* src/baobab-treeview.c: (on_tv_button_press): fixed bug
+
 2006-04-26  Fabio Marzocca  <thesaltydog@gmail.com>
 
 	* help/C/baobab.xml: fixed figures
